[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/graph/UI/menu/jouer_button_pressed.png" type="Texture" id=1]
[ext_resource path="res://Assets/graph/UI/menu/jouer_button_hover.png" type="Texture" id=2]
[ext_resource path="res://Assets/graph/UI/menu/jouer_button.png" type="Texture" id=3]
[ext_resource path="res://Assets/graph/UI/menu/jouer_button_mask.png" type="BitMap" id=4]
[ext_resource path="res://UI/MainScreen.gd" type="Script" id=5]
[ext_resource path="res://Assets/graph/UI/menu/exit_button_hover.png" type="Texture" id=6]
[ext_resource path="res://Assets/graph/UI/menu/exit_button_pressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/graph/UI/menu/credit_button_pressed.png" type="Texture" id=8]
[ext_resource path="res://Assets/graph/UI/menu/credit_button.png" type="Texture" id=9]
[ext_resource path="res://Assets/graph/UI/menu/credit_button_hover.png" type="Texture" id=10]
[ext_resource path="res://Assets/graph/UI/menu/exit_button.png" type="Texture" id=11]
[ext_resource path="res://Assets/Audio/UI/FPG_Jingle_OS_01_01_Positive.ogg" type="AudioStream" id=12]
[ext_resource path="res://Assets/Audio/UI/FPG_UI_OS_01_04_Positive.ogg" type="AudioStream" id=13]
[ext_resource path="res://Assets/graph/UI/menu/titre_1.png" type="Texture" id=14]

[node name="MainScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.152941, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jouer" type="TextureButton" parent="ColorRect"]
margin_left = 182.0
margin_top = 165.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )
texture_click_mask = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credit" type="TextureButton" parent="ColorRect"]
margin_left = 330.0
margin_top = 320.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 10 )
texture_click_mask = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitter" type="TextureButton" parent="ColorRect"]
margin_left = 127.0
margin_top = 347.0
margin_right = 353.0
margin_bottom = 558.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_click_mask = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_play" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="ui_credit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="titre_1" type="Sprite" parent="."]
position = Vector2( 668.654, 304.002 )
texture = ExtResource( 14 )
[connection signal="pressed" from="ColorRect/jouer" to="." method="go_to_scene"]
[connection signal="pressed" from="ColorRect/credit" to="." method="go_to_credit"]
[connection signal="pressed" from="ColorRect/quitter" to="." method="exit_button"]
